cleanup output folders

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,7 @@ manifest {
     mainScript = 'main.nf'
     author = "Denis O'Meally"
     version = "0.1"
-    description = "Nextflow pipeline modelled after GATK "
+    description = "Nextflow pipeline modelled after samtools man page"
 }
 
 singularity {
@@ -11,10 +11,12 @@ singularity {
 }
 
 params { 
-  output        = "results-nf/"
+  output        = "../data"
   name          = "bam2fastq-nf"
   bams         = "../data/bams/*.bam"
 }
+
+// City of Hope Apollo cluster
 
 process {
         executor='slurm'
@@ -40,4 +42,3 @@ dag {
   enabled = true
   file = "${params.output}/pipeline_info/pipeline_dag.svg"
 }
-
