fix paths and general tidy up

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,17 +11,17 @@ singularity {
 }
 
 params { 
-  output        = "../data"
   name          = "bam2fastq-nf"
-  bams         = "../data/bams/*.bam"
+  bams         = "../data/bam/*.bam"
+  output        = "../data"
 }
 
-// City of Hope Apollo cluster
+// City of Hope Apollo cluster, fast queue
 
 process {
         executor='slurm'
-        queue='all'
-        memory='2.G'
+        queue='fast'
+        memory='8.G'
         cpus='1'
         time='2.h'
         }
