--- a/nextflow.config
+++ b/nextflow.config
@@ -13,7 +13,7 @@ singularity {
 params { 
   name          = "bam2fastq-nf"
   bams         = "../data/bam/*.bam"
-  output        = "../data"
+  output        = "../data/fastq"
 }
 
 // City of Hope Apollo cluster, fast queue
@@ -28,17 +28,17 @@ process {
 
 timeline {
   enabled = true
-  file = "${params.output}/pipeline_info/execution_timeline.html"
+  file = "${params.output}/bam2fastq/pipeline_info/execution_timeline.html"
 }
 report {
   enabled = true
-  file = "${params.output}/pipeline_info/execution_report.html"
+  file = "${params.output}/bam2fastq/pipeline_info/execution_report.html"
 }
 trace {
   enabled = true
-  file = "${params.output}/pipeline_info/execution_trace.txt"
+  file = "${params.output}/bam2fastq/pipeline_info/execution_trace.txt"
 }
 dag {
   enabled = true
-  file = "${params.output}/pipeline_info/pipeline_dag.svg"
+  file = "${params.output}/bam2fastq/pipeline_info/pipeline_dag.svg"
 }
