multi queue config

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,7 +20,7 @@ params {
 
 process {
         executor='slurm'
-        queue='fast'
+        queue = { task.time >= 6.h ? 'all' : task.memory >= 50.GB ? 'all' : task.cpu <= 2 ? 'fast' : 'all' }
         memory='8.G'
         cpus='1'
         time='2.h'
